<resources>
    <string name="app_name">Who did that</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="communication_button">Messages</string>
    <string name="notes_button">Notes</string>
    <string name="calendar_button">Calendar</string>
    <string name="settings_button">Settings</string>
    <string name="voting_button">Voting</string>
    <string name="help_button">Help</string>


    <string name="name_input_hint">Name</string>
    <string name="person_name">Insert Name</string>

    <string name="age_input_hint">Age</string>
    <string name="person_age">Insert Age</string>

    <string name="pronouns_input_hint">Pronouns</string>
    <string name="person_Pronouns">Insert Pronouns</string>

    <string name="occupation_input_hint">Occupation</string>
    <string name="person_Occupation">Insert Occupation</string>

    <string name="more_info_input_hint">Additional information</string>
    <string name="person_more_info">Insert additional info</string>




    <string name="notes_title">Notes</string>
    <string name="notes_text_hint">Write your notes here…</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_reglages">activity_menu_reglages</string>
</resources>