<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3FBFF"
    android:backgroundTint="#F3FBFF"
    tools:context=".MenuViewPersonne">

    <Button
        android:id="@+id/button_add_pfp"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/add_profile_picture_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textPersonName"
        android:layout_width="232dp"
        android:layout_height="50dp"
        android:ems="10"
        android:text="@string/person_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_add_pfp"
        app:layout_constraintTop_toTopOf="@+id/button_add_pfp" />

    <TextView
        android:id="@+id/textPersonAge"
        android:layout_width="232dp"
        android:layout_height="50dp"
        android:ems="10"
        android:text="@string/person_age"
        app:layout_constraintEnd_toEndOf="@+id/textPersonName"
        app:layout_constraintStart_toEndOf="@+id/button_add_pfp"
        app:layout_constraintTop_toBottomOf="@+id/textPersonName" />

    <TextView
        android:id="@+id/textPersonPronouns"
        android:layout_width="232dp"
        android:layout_height="50dp"
        android:ems="10"
        android:text="@string/person_Pronouns"
        app:layout_constraintEnd_toEndOf="@+id/textPersonName"
        app:layout_constraintStart_toEndOf="@+id/button_add_pfp"
        app:layout_constraintTop_toBottomOf="@+id/textPersonAge" />

    <TextView
        android:id="@+id/textPersonOccupation"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:text="@string/person_Occupation"
        app:layout_constraintEnd_toEndOf="@+id/textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_add_pfp"
        app:layout_constraintTop_toBottomOf="@+id/textPersonPronouns" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="375dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_add_pfp"
        app:layout_constraintTop_toBottomOf="@+id/textPersonOccupation"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textMoreInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:text="@string/person_more_info"
            android:minHeight="50dp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>